<resources>
    <string name="app_name">GDSCMMCOE-CommunityApp</string>
    <string name="team_info">We are a group of people with a clear sense of purpose. We believe in continuous learning and development.
    The Technology awareness is main goal for our community.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="c_programming">C++ Programming</string>
    <string name="this_is_the_programming_language">This is the programming language</string>
    <string name="there_are_no_upcoming_events">There are no upcoming events. \n Stay tuned for next updates!!</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="past_events">Past Events</string>
    <string name="Our_web">Our Website</string>
    <string name="Extra_info" >Google Developer Student Clubs is a community which aims at helping students to network globally to facilitate the enhancement of their skills, resources and  provides a platform to showcase their talent.</string>
    <string name="joinCommunity">Join Our Community</string>
    <string name="memberLink">Become A Member</string>
    <string name="about_header">Google Developer Student Clubs Helping students bridge the gap between theory and practice Google Developer Student Clubs (GDSC) are community groups for college and university students interested in Google developer technologies. Students from all undergraduate or graduate programs with an interest in growing as a developer are welcome. By joining a GDSC, students grow their knowledge in a peer-to-peer learning environment and build solutions for local businesses and their community.</string>
    <string name="view_all">View All</string>
</resources>